--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,44 @@
 [project]
 name = "fall-detection"
 version = "0.1.0"
-description = "Add your description here"
+description = "Fall detection using CNNs and SNNs on microcontrollers"
+authors = [{name = "Iain Barkley"}]
 requires-python = ">=3.13"
+readme = "README.md"
+
 dependencies = [
-    "jupyter>=1.1.1",
-    "matplotlib>=3.10.6",
-    "nengo>=4.1.0",
+    # Core scientific computing
     "numpy>=2.3.2",
-    "openpyxl>=3.1.5",
     "pandas>=2.3.2",
+    "scipy>=1.16.1",
     "scikit-learn>=1.7.1",
+    # Deep learning
     "tensorflow>=2.20.0",
+    "keras>=3.11.3",
+    "keras-lmu>=0.9.0",
+    # Neuromorphic computing
+    "nengo>=4.1.0",
+    # Data processing & utilities
+    "h5py>=3.14.0",
+    "tqdm>=4.67.2",
+    "openpyxl>=3.1.5",
+    # Visualization
+    "matplotlib>=3.10.6",
+    "seaborn>=0.13.2",
+    # Jupyter
+    "jupyter>=1.1.1",
+    "ipykernel>=6.30.1",
+    "kagglehub>=0.4.2",
 ]
 
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = []  # This is a research project with notebooks, not an installable package
+
+[dependency-groups]
+dev = [
+    "nbstripout>=0.9.0",
+]
